<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="maksis9n.com.test_github_reader.SearchActivity">

    <TextView
        android:id="@+id/text_view_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:text="@string/text_view_name_user"/>

    <TextView
        android:id="@+id/text_view_type_repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_name_user"
        android:layout_alignStart="@+id/text_view_name_user"
        android:layout_below="@+id/text_view_name_user"
        android:layout_marginTop="25dp"
        android:text="@string/text_view_type_repositories"/>

    <EditText
        android:id="@+id/edit_text_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_view_name_user"
        android:layout_alignBottom="@+id/text_view_name_user"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:ems="9"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_text_name_user"
        android:layout_alignRight="@+id/edit_text_name_user"
        android:layout_below="@+id/spinner_type_repositories"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="37dp"
        android:text="@string/button_search"/>

    <Spinner
        android:id="@+id/spinner_type_repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_view_type_repositories"
        android:layout_alignLeft="@+id/edit_text_name_user"
        android:layout_alignStart="@+id/edit_text_name_user"/>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/button_search"
        android:layout_alignLeft="@+id/text_view_type_repositories"
        android:layout_alignRight="@+id/button_search"
        android:layout_alignStart="@+id/text_view_type_repositories"
        android:layout_below="@+id/button_search"
        android:layout_marginTop="30dp">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/text_view_last_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/history_recycler_view"
        android:layout_alignStart="@+id/history_recycler_view"
        android:layout_below="@+id/button_search"
        android:text="@string/text_view_last_query"/>


</RelativeLayout>
